2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (assign_escape_character): Improve
	diagnostic when user fumbles escape character selection.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp (environment::add_node): Add assertion.
	This function should never be given a null pointer argument.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp (environment::make_tag): When not
	formatting HTML, return a new transparent dummy node instead of
	a null pointer.  When this function was implemented in
	2001-2004, the decision to return a null pointer violated an
	{undocumented, possibly uncontemplated} invariant that
	`environment::add_node()` was never passed a null pointer.  By a
	returning an actual object, we can restore that invariant.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp: Fix code style nits.
	(environment::make_tab_node): Parenthesize formally complex
	expression.
	(environment::make_tab_node, environment::advance_to_tab_stop):
	Explicitly compare value of pointer type to null pointer literal
	instead of letting it pun down to a Boolean.  Revise logic for
	less cleverness (gratuitous use of ternary operator on pointer).

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp: Trivially refactor.
	(add_hyphenation_exceptions): Rename this...
	(add_hyphenation_exception_words_request): ...to this.
	(init_hyphenation_pattern_requests): Update wiry-uppery.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_translate): Fix copy-and-paste
	braino in assertion message.

2025-11-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/node.cpp (remove_font_specific_character):
	Recover from invalid input more robustly.  If we encounter an